Создано с помощью Colaboratory

--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOsoV1/BIaWM/6pjHl8D/is",
+      "authorship_tag": "ABX9TyOtnIvCTtwZADo/B9ltMOPL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,27 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 266,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "9b0e39fd-fbd2-4445-fb36-e3108058abcc"
+        "outputId": "fb9db5b9-227d-4ff0-9faf-cb0d10e9786a",
+        "cellView": "code"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
             "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
@@ -57,54 +50,54 @@
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
+            "---------------------------\n",
             "Введите ход:\n",
             "e1e2\n",
-            "7 4 6 4\n",
-            "Ход ann\n",
-            "7,4,6,4\n",
             "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 1. 0. 0. 0.]]\n"
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
+            "---------------------------\n",
+            "Введите ход:\n",
+            "e8e7\n",
+            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
+            "---------------------------\n"
           ]
         }
       ],
       "source": [
         "import numpy as np\n",
-        "from abc import ABC, abstractmethod\n",
-        "\n",
-        "class Board:\n",
-        "  def __init__(self):\n",
-        "    self.__board = np.zeros((8,8))\n",
-        "\n",
-        "  @property\n",
-        "  def board(self):\n",
-        "    return self.__board\n",
-        "\n",
-        "  @board.setter\n",
-        "  def board(self, board):\n",
-        "    self.__board = board\n",
-        "\n",
-        "  def set_piece(self, x, y):\n",
-        "    self.__board[x][y] = 1\n",
-        "\n",
-        "  def delete_piece(self, x, y):\n",
-        "    self.__board[x][y] = 0\n",
         "\n",
         "\n",
         "class Piece:\n",
-        "  def __init__(self, name, x, y):\n",
-        "    self.__name = name\n",
+        "  def __init__(self, color, x, y):\n",
+        "    self.__color = color\n",
         "    self.__x = x\n",
         "    self.__y = y\n",
         "\n",
         "  @property\n",
-        "  def name(self):\n",
-        "    return self.__name\n",
+        "  def color(self):\n",
+        "    return self.__color\n",
         "\n",
         "  @property\n",
         "  def x(self):\n",
@@ -123,161 +116,95 @@
         "    self.__y = y\n",
         "\n",
         "\n",
-        "class Game:\n",
-        "  def __init__(self, list_pieces):\n",
-        "    self.__new_board = Board()\n",
-        "    self.__chess_pieces = list_pieces\n",
+        "white_king = Piece('white', 'e', '1') # e1\n",
+        "black_king = Piece('black', 'e', '8') # e8\n",
         "\n",
-        "  @property\n",
-        "  def board(self):\n",
-        "    return self.__new_board.board\n",
-        "\n",
-        "  @board.setter\n",
-        "  def board(self, board):\n",
-        "    self.__new_board.board = board\n",
+        "class Board:\n",
+        "  def __init__(self):\n",
+        "    self.board = np.zeros((8,8))\n",
+        "    self.start_chess_list = [white_king, black_king]\n",
         "\n",
         "  def start(self):\n",
-        "    for piece in self.__chess_pieces:\n",
-        "      self.__new_board.set_piece(piece.x, piece.y)\n",
+        "    horizontal = {'a':'0', 'b':'1', 'c':'2', 'd':'3', 'e':'4', 'f':'5', 'g':'6', 'h':'7'}\n",
+        "    vertical = {'8':'0', '7':'1', '6':'2', '5':'3', '4':'4', '3':'5', '2':'6', '1':'7'}\n",
+        "    for piece in self.start_chess_list:\n",
+        "      y = int(horizontal[piece.x])\n",
+        "      x = int(vertical[piece.y])\n",
+        "      self.board[x][y] = 1\n",
         "\n",
-        "  def delete_start_piece(self, x, y):\n",
-        "    self.__new_board.delete_piece(x, y)\n",
-        "\n",
-        "  def move(self, x_old, y_old, x_new, y_new):\n",
-        "    for piece in self.__chess_pieces:\n",
-        "      if piece.x == x_old & piece.y == y_old:\n",
-        "        self.__new_board.delete_piece(piece.x, piece.y)\n",
-        "        self.__new_board.set_piece(x_new, y_new)\n",
-        "        piece.x = x_new\n",
-        "        piece.y = y_new\n",
-        "\n",
-        "class Player:\n",
-        "  def __init__(self, name, list_pieces):\n",
-        "    self.__name = name\n",
-        "    self.__game = Game(list_pieces)\n",
-        "\n",
-        "  @property\n",
-        "  def game(self):\n",
-        "    return self.__game\n",
-        "\n",
-        "  @game.setter\n",
-        "  def game(self, game):\n",
-        "    self.__game = game\n",
-        "\n",
-        "  def start(self):\n",
-        "    self.__game.start()\n",
-        "\n",
-        "  def delete_start_piece(self, x, y):\n",
-        "    self.__game.delete_start_piece(x, y)\n",
-        "\n",
-        "  def move(self, x_old, y_old, x_new, y_new):\n",
-        "    self.__game.move(x_old, y_old, x_new, y_new)\n",
-        "\n",
-        "\n",
-        "class Play:\n",
-        "  def __init__(self, name1, name2, list_pieces):\n",
-        "    self.__player1 = Player(name1, list_pieces)\n",
-        "    self.__player2 = Player(name2, list_pieces)\n",
-        "    self.__color = True\n",
-        "\n",
-        "  def __str__(self):\n",
-        "    if self.__color == True:\n",
-        "      return str(self.__player1.game.board)\n",
-        "    else:\n",
-        "      return str(self.__player2.game.board)\n",
-        "\n",
-        "  @property\n",
-        "  def player1(self):\n",
-        "    return self.__player1\n",
-        "\n",
-        "  def start(self):\n",
-        "    self.__player1.start()\n",
-        "    self.__player2.start()\n",
+        "  def move(self, color, x_old, y_old, x_new, y_new):\n",
+        "    if color == 'white':\n",
+        "      x_change = x_old\n",
+        "      y_change = y_old\n",
+        "      horizontal = {'a':'0', 'b':'1', 'c':'2', 'd':'3', 'e':'4', 'f':'5', 'g':'6', 'h':'7'}\n",
+        "      vertical = {'8':'0', '7':'1', '6':'2', '5':'3', '4':'4', '3':'5', '2':'6', '1':'7'}\n",
+        "      x_old = int(horizontal[x_old])\n",
+        "      y_old = int(vertical[y_old])\n",
+        "      x_new = int(horizontal[x_new])\n",
+        "      y_new = int(vertical[y_new])\n",
+        "      for piece in self.start_chess_list:\n",
+        "        piece.x = x_change\n",
+        "        piece.y = y_change\n",
+        "        x = int(horizontal[piece.x])\n",
+        "        y = int(vertical[piece.y])\n",
+        "        if x == x_old and y == y_old:\n",
+        "          self.board[y_new][x_new] = 1\n",
+        "          self.board[y_old][x_old] = 0\n",
+        "    elif color == 'black':\n",
+        "      x_change = x_old\n",
+        "      y_change = y_old\n",
+        "      horizontal = {'h':'0', 'g':'1', 'f':'2', 'e':'3', 'd':'4', 'c':'5', 'b':'6', 'a':'7'}\n",
+        "      vertical = {'8':'7', '7':'6', '6':'5', '5':'4', '4':'3', '3':'2', '2':'1,', '1':'0'}\n",
+        "      x_old = int(horizontal[x_old])\n",
+        "      y_old = int(vertical[y_old])\n",
+        "      x_new = int(horizontal[x_new])\n",
+        "      y_new = int(vertical[y_new])\n",
+        "      for piece in self.start_chess_list:\n",
+        "        piece.x = x_change\n",
+        "        piece.y = y_change\n",
+        "        x = int(horizontal[piece.x])\n",
+        "        y = int(vertical[piece.y])\n",
+        "        if x == x_old and y == y_old:\n",
+        "          self.board[y_new][x_new] = 1\n",
+        "          self.board[y_old][x_old] = 0\n",
         "\n",
         "  def rotate_board(self):\n",
-        "    if self.__color:\n",
-        "      board = self.__player1.game.board\n",
-        "      self.__player2.game.board = np.rot90(board, 2)\n",
-        "      self.__color = False\n",
-        "    else:\n",
-        "      board = self.__player2.game.board\n",
-        "      self.__player1.game.board = np.rot90(board, 2)\n",
-        "      self.__color = True\n",
-        "\n",
-        "  def move_white_player(self, x_old, y_old, x_new, y_new):\n",
-        "    # horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
-        "    # vertical = {'8':0, '7':1, '6':2, '5':3, '4':4, '3':5, '2':6, '1':7}\n",
-        "    # y_new = int(horizontal[x])\n",
-        "    # x_new = int(vertical[y])\n",
-        "    print(f'{x_old},{y_old},{x_new},{y_new}')\n",
-        "    self.__player1.move(x_old, y_old, x_new, y_new)\n",
-        "\n",
-        "  # def move_black_player(self, x_old, y_old, x_new, y_new):\n",
-        "  #   # horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
-        "  #   # vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
-        "  #   # y_new = int(horizontal[x])\n",
-        "  #   # x_new = int(vertical[y])\n",
-        "  #   print(f'{x_old},{y_old},{x_new},{y_new}')\n",
-        "  #   self.__player2.move(x_old, y_old, x_new, y_new)\n",
+        "    self.board = np.rot90(self.board, 2)\n",
         "\n",
         "\n",
-        "class ListPieces:\n",
-        "  def __init__(self):\n",
-        "    self.__white_king = Piece('white_king', 7, 4) # e1\n",
-        "    self.__black_king = Piece('black_king', 0, 4) # e8\n",
-        "    self.__start_chess_list = [self.__white_king, self.__black_king]\n",
+        "class Player:\n",
+        "  def __init__(self, name, color):\n",
+        "    self.__name = name\n",
+        "    self.__color = color\n",
         "\n",
         "  @property\n",
-        "  def start_chess_list(self):\n",
-        "    return self.__start_chess_list\n",
+        "  def name(self):\n",
+        "    return self.__name\n",
+        "\n",
+        "  @name.setter\n",
+        "  def name(self, name):\n",
+        "    self.__name = name\n",
+        "\n",
+        "  @property\n",
+        "  def color(self):\n",
+        "    return self.__color\n",
+        "\n",
+        "  @color.setter\n",
+        "  def color(self, color):\n",
+        "    self.__color = color\n",
         "\n",
         "\n",
         "class Service:\n",
-        "  def __init__(self, name1, name2):\n",
-        "    self.name1 = name1\n",
-        "    self.name2 = name2\n",
-        "    self.list_pieces = ListPieces()\n",
-        "    self.play = Play(name1, name2, self.list_pieces.start_chess_list)\n",
-        "\n",
-        "  def start(self):\n",
-        "    self.play.start()\n",
-        "\n",
-        "  def print_board(self):\n",
-        "    print(self.play)\n",
-        "\n",
-        "  def rotate_board(self):\n",
-        "    self.play.rotate_board()\n",
-        "\n",
-        "  # def clear_first_black_move(self, x_old, y_old):\n",
-        "  #   for piece in self.list_pieces.start_chess_list:\n",
-        "  #     if piece.x == x_old & piece.y == y_old:\n",
-        "  #       self.play.player1.delete_start_piece(piece.x, piece.y)\n",
-        "\n",
-        "  def white_move(self, x_old, y_old, x_new, y_new):\n",
-        "    print(f\"Ход {self.name1}\")\n",
-        "    self.play.move_white_player(x_old, y_old, x_new, y_new)\n",
-        "\n",
-        "  def black_move(self, x_old, y_old, x_new, y_new):\n",
-        "    print(f\"Ход {self.name2}\")\n",
-        "    self.play.move_black_player(x_old, y_old, x_new, y_new)\n",
-        "\n",
-        "\n",
-        "class Presenter:\n",
         "  def __init__(self):\n",
-        "    # self.name1 = input(\"Введите имя 1 игрока:\\n\")\n",
-        "    # self.name2 = input(\"Введите имя 2 игрока:\\n\")\n",
-        "    self.name1 = 'ann'\n",
-        "    self.name2 = 'mike'\n",
-        "    self.service = Service(self.name1, self.name2)\n",
+        "    self.player1 = Player('ann', 'white')\n",
+        "    self.player2 = Player('mike', 'black')\n",
+        "    self.board = Board()\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return str(self.board.board)\n",
         "\n",
         "  def start(self):\n",
-        "    self.service.start()\n",
-        "\n",
-        "  def print_board(self):\n",
-        "    self.service.print_board()\n",
-        "\n",
-        "  def rotate_board(self):\n",
-        "    self.service.rotate_board()\n",
+        "    self.board.start()\n",
         "\n",
         "  def white_move(self):\n",
         "    item = input(\"Введите ход:\\n\")\n",
@@ -285,14 +212,7 @@
         "    old_vertical = item[1]\n",
         "    new_horizontal = item[2]\n",
         "    new_vertical = item[3]\n",
-        "    horizontal = {'a':0, 'b':1, 'c':2, 'd':3, 'e':4, 'f':5, 'g':6, 'h':7}\n",
-        "    vertical = {'8':0, '7':1, '6':2, '5':3, '4':4, '3':5, '2':6, '1':7}\n",
-        "    y_old = int(horizontal[old_horizontal])\n",
-        "    x_old = int(vertical[old_vertical])\n",
-        "    y_new = int(horizontal[new_horizontal])\n",
-        "    x_new = int(vertical[new_vertical])\n",
-        "    print(x_old, y_old, x_new, y_new)\n",
-        "    self.service.white_move(x_old, y_old, x_new, y_new)\n",
+        "    self.board.move(self.player1.color, old_horizontal, old_vertical, new_horizontal, new_vertical)\n",
         "\n",
         "  def black_move(self):\n",
         "    item = input(\"Введите ход:\\n\")\n",
@@ -300,41 +220,24 @@
         "    old_vertical = item[1]\n",
         "    new_horizontal = item[2]\n",
         "    new_vertical = item[3]\n",
-        "    horizontal = {'h':0, 'g':1, 'f':2, 'e':3, 'd':4, 'c':5, 'b':6, 'a':7}\n",
-        "    vertical = {'8':7, '7':6, '6':5, '5':4, '4':3, '3':2, '2':1, '1':0}\n",
-        "    y_old = int(horizontal[old_horizontal])\n",
-        "    x_old = int(vertical[old_vertical])\n",
-        "    y_new = int(horizontal[new_horizontal])\n",
-        "    x_new = int(vertical[new_vertical])\n",
-        "    print(x_old, y_old, x_new, y_new)\n",
-        "    self.service.black_move(x_old, y_old, x_new, y_new)\n",
-        "    # self.service.clear_first_black_move(x_old, y_old)\n",
+        "    self.board.move(self.player2.color, old_horizontal, old_vertical, new_horizontal, new_vertical)\n",
         "\n",
+        "  def rotate(self):\n",
+        "    self.board.rotate_board()\n",
         "\n",
-        "class View:\n",
-        "  def __init__(self):\n",
-        "    self.presenter = Presenter()\n",
-        "    self.work = True\n",
-        "\n",
-        "  def start_new_game(self):\n",
-        "    self.move_counter = 0\n",
-        "    self.presenter.print_board()\n",
-        "    self.presenter.start()\n",
-        "    self.presenter.print_board()\n",
-        "    self.presenter.white_move()\n",
-        "    self.presenter.print_board()\n",
-        "\n",
-        "\n",
-        "  def finish(self):\n",
-        "    print(\"Выход\")\n",
-        "    self.work = False\n",
-        "\n",
-        "\n",
-        "def main():\n",
-        "  v = View()\n",
-        "  v.start_new_game()\n",
-        "\n",
-        "main()"
+        "s = Service()\n",
+        "s.start()\n",
+        "print(s)\n",
+        "print('---------------------------')\n",
+        "s.white_move()\n",
+        "print(s)\n",
+        "print('---------------------------')\n",
+        "s.rotate()\n",
+        "print(s)\n",
+        "print('---------------------------')\n",
+        "s.black_move()\n",
+        "print(s)\n",
+        "print('---------------------------')"
       ]
     }
   ]
