--- a/chess.ipynb
+++ b/chess.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOtnIvCTtwZADo/B9ltMOPL",
+      "authorship_tag": "ABX9TyNf37VGTHWTspMYKs8Rph9W",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,19 +28,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 266,
+      "execution_count": 284,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 930
         },
         "id": "wGpJU3UpBLW9",
-        "outputId": "fb9db5b9-227d-4ff0-9faf-cb0d10e9786a",
+        "outputId": "a318f100-27c7-41c8-e08b-7db11db24139",
         "cellView": "code"
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
@@ -52,36 +53,41 @@
             " [0. 0. 0. 0. 1. 0. 0. 0.]]\n",
             "---------------------------\n",
             "Введите ход:\n",
-            "e1e2\n",
+            "e1e7\n",
             "[[0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 1. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
             "---------------------------\n",
             "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
+            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
             " [0. 0. 0. 1. 0. 0. 0. 0.]]\n",
             "---------------------------\n",
             "Введите ход:\n",
-            "e8e7\n",
-            "[[0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0.]]\n",
-            "---------------------------\n"
+            "e1e2\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-284-55c85de74df9>\u001b[0m in \u001b[0;36m<cell line: 163>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    161\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    162\u001b[0m \u001b[0mv\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mView\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 163\u001b[0;31m \u001b[0mv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-284-55c85de74df9>\u001b[0m in \u001b[0;36mstart\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    154\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mservice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    155\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'---------------------------'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 156\u001b[0;31m       \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mservice\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mblack_move\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    157\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mservice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    158\u001b[0m       \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'---------------------------'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-284-55c85de74df9>\u001b[0m in \u001b[0;36mblack_move\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    133\u001b[0m     \u001b[0mnew_horizontal\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m     \u001b[0mnew_vertical\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mitem\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 135\u001b[0;31m     \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mboard\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mplayer2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mold_horizontal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mold_vertical\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_horizontal\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnew_vertical\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    136\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    137\u001b[0m   \u001b[0;32mdef\u001b[0m \u001b[0mrotate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-284-55c85de74df9>\u001b[0m in \u001b[0;36mmove\u001b[0;34m(self, color, x_old, y_old, x_new, y_new)\u001b[0m\n\u001b[1;32m     71\u001b[0m       \u001b[0my_old\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvertical\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my_old\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     72\u001b[0m       \u001b[0mx_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhorizontal\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mx_new\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 73\u001b[0;31m       \u001b[0my_new\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvertical\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my_new\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     74\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0mpiece\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstart_chess_list\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     75\u001b[0m         \u001b[0mpiece\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_change\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: '1,'"
           ]
         }
       ],
@@ -225,19 +231,30 @@
         "  def rotate(self):\n",
         "    self.board.rotate_board()\n",
         "\n",
-        "s = Service()\n",
-        "s.start()\n",
-        "print(s)\n",
-        "print('---------------------------')\n",
-        "s.white_move()\n",
-        "print(s)\n",
-        "print('---------------------------')\n",
-        "s.rotate()\n",
-        "print(s)\n",
-        "print('---------------------------')\n",
-        "s.black_move()\n",
-        "print(s)\n",
-        "print('---------------------------')"
+        "\n",
+        "class View:\n",
+        "  def __init__(self):\n",
+        "    self.service = Service()\n",
+        "\n",
+        "  def start(self):\n",
+        "    self.service.start()\n",
+        "    while True:\n",
+        "      print(self.service)\n",
+        "      print('---------------------------')\n",
+        "      self.service.white_move()\n",
+        "      print(self.service)\n",
+        "      print('---------------------------')\n",
+        "      self.service.rotate()\n",
+        "      print(self.service)\n",
+        "      print('---------------------------')\n",
+        "      self.service.black_move()\n",
+        "      print(self.service)\n",
+        "      print('---------------------------')\n",
+        "      self.service.rotate()\n",
+        "\n",
+        "\n",
+        "v = View()\n",
+        "v.start()"
       ]
     }
   ]
