--- a/fastapi.ipynb
+++ b/fastapi.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPrZUfHT9DVZCQfKrD07W4Z",
+      "authorship_tag": "ABX9TyMdb+4XIFAyXa3YMIeWFQN9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "P1aiWbdLLYkT",
-        "outputId": "47ed6efa-73ee-47af-e13f-ad15bf219126"
+        "outputId": "0bde57cb-7c4a-401a-e089-f7a2a0ff8d60"
       },
       "outputs": [
         {
@@ -42,34 +42,34 @@
           "name": "stdout",
           "text": [
             "Collecting fastapi\n",
-            "  Downloading fastapi-0.104.0-py3-none-any.whl (92 kB)\n",
-            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/92.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m92.2/92.9 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.9/92.9 kB\u001b[0m \u001b[31m2.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "  Downloading fastapi-0.104.1-py3-none-any.whl (92 kB)\n",
+            "\u001b[?25l     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m0.0/92.9 kB\u001b[0m \u001b[31m?\u001b[0m eta \u001b[36m-:--:--\u001b[0m\r\u001b[2K     \u001b[91m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[91m╸\u001b[0m \u001b[32m92.2/92.9 kB\u001b[0m \u001b[31m3.0 MB/s\u001b[0m eta \u001b[36m0:00:01\u001b[0m\r\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m92.9/92.9 kB\u001b[0m \u001b[31m2.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: nest-asyncio in /usr/local/lib/python3.10/dist-packages (1.5.8)\n",
             "Collecting pyngrok\n",
             "  Downloading pyngrok-7.0.0.tar.gz (718 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.7/718.7 kB\u001b[0m \u001b[31m10.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m718.7/718.7 kB\u001b[0m \u001b[31m8.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting uvicorn\n",
             "  Downloading uvicorn-0.23.2-py3-none-any.whl (59 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.5/59.5 kB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m59.5/59.5 kB\u001b[0m \u001b[31m7.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: anyio<4.0.0,>=3.7.1 in /usr/local/lib/python3.10/dist-packages (from fastapi) (3.7.1)\n",
             "Requirement already satisfied: pydantic!=1.8,!=1.8.1,!=2.0.0,!=2.0.1,!=2.1.0,<3.0.0,>=1.7.4 in /usr/local/lib/python3.10/dist-packages (from fastapi) (1.10.13)\n",
             "Collecting starlette<0.28.0,>=0.27.0 (from fastapi)\n",
             "  Downloading starlette-0.27.0-py3-none-any.whl (66 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m67.0/67.0 kB\u001b[0m \u001b[31m7.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m67.0/67.0 kB\u001b[0m \u001b[31m8.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hCollecting typing-extensions>=4.8.0 (from fastapi)\n",
             "  Downloading typing_extensions-4.8.0-py3-none-any.whl (31 kB)\n",
             "Requirement already satisfied: PyYAML in /usr/local/lib/python3.10/dist-packages (from pyngrok) (6.0.1)\n",
             "Requirement already satisfied: click>=7.0 in /usr/local/lib/python3.10/dist-packages (from uvicorn) (8.1.7)\n",
             "Collecting h11>=0.8 (from uvicorn)\n",
             "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m8.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<4.0.0,>=3.7.1->fastapi) (3.4)\n",
             "Requirement already satisfied: sniffio>=1.1 in /usr/local/lib/python3.10/dist-packages (from anyio<4.0.0,>=3.7.1->fastapi) (1.3.0)\n",
             "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<4.0.0,>=3.7.1->fastapi) (1.1.3)\n",
             "Building wheels for collected packages: pyngrok\n",
             "  Building wheel for pyngrok (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyngrok: filename=pyngrok-7.0.0-py3-none-any.whl size=21129 sha256=1b12e0d67f460f2e12873b6d280c652593fb7f975a6fee3f45ef766fcdb4e840\n",
+            "  Created wheel for pyngrok: filename=pyngrok-7.0.0-py3-none-any.whl size=21129 sha256=2ff8a807e2d9fd53730e6cd1f1eb14fcf16f4e456480b8e7c36b16232ec23b8a\n",
             "  Stored in directory: /root/.cache/pip/wheels/60/29/7b/f64332aa7e5e88fbd56d4002185ae22dcdc83b35b3d1c2cbf5\n",
             "Successfully built pyngrok\n",
             "Installing collected packages: typing-extensions, pyngrok, h11, uvicorn, starlette, fastapi\n",
@@ -81,7 +81,7 @@
             "lida 0.0.10 requires kaleido, which is not installed.\n",
             "lida 0.0.10 requires python-multipart, which is not installed.\n",
             "tensorflow-probability 0.22.0 requires typing-extensions<4.6.0, but you have typing-extensions 4.8.0 which is incompatible.\u001b[0m\u001b[31m\n",
-            "\u001b[0mSuccessfully installed fastapi-0.104.0 h11-0.14.0 pyngrok-7.0.0 starlette-0.27.0 typing-extensions-4.8.0 uvicorn-0.23.2\n"
+            "\u001b[0mSuccessfully installed fastapi-0.104.1 h11-0.14.0 pyngrok-7.0.0 starlette-0.27.0 typing-extensions-4.8.0 uvicorn-0.23.2\n"
           ]
         }
       ],
@@ -93,17 +93,8 @@
       "cell_type": "code",
       "source": [
         "from fastapi import FastAPI\n",
-        "from fastapi.middleware.cors import CORSMiddleware\n",
         "\n",
         "app = FastAPI()\n",
-        "\n",
-        "app.add_middleware(\n",
-        "    CORSMiddleware,\n",
-        "    allow_origins=['*'],\n",
-        "    allow_credentials=True,\n",
-        "    allow_methods=['*'],\n",
-        "    allow_headers=['*'],\n",
-        ")\n",
         "\n",
         "@app.get('/')\n",
         "async def root():\n",
@@ -112,7 +103,7 @@
       "metadata": {
         "id": "4L4OcO1LLrJg"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -132,9 +123,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wSK_4ut1Lw01",
-        "outputId": "5cd80545-e461-48e3-9816-06f1aa1baa42"
+        "outputId": "53c451d9-9b9f-49a0-b292-b6c407bb9832"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,8 +136,8 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "WARNING:pyngrok.process.ngrok:t=2023-10-25T23:32:58+0000 lvl=warn msg=\"ngrok config file found at legacy location, move to XDG location\" xdg_path=/root/.config/ngrok/ngrok.yml legacy_path=/root/.ngrok2/ngrok.yml\n",
-            "INFO:     Started server process [333]\n",
+            "WARNING:pyngrok.process.ngrok:t=2023-10-30T21:44:27+0000 lvl=warn msg=\"ngrok config file found at legacy location, move to XDG location\" xdg_path=/root/.config/ngrok/ngrok.yml legacy_path=/root/.ngrok2/ngrok.yml\n",
+            "INFO:     Started server process [160]\n",
             "INFO:     Waiting for application startup.\n",
             "INFO:     Application startup complete.\n",
             "INFO:     Uvicorn running on http://127.0.0.1:8000 (Press CTRL+C to quit)\n"
@@ -156,8 +147,10 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Public URL: https://1439-34-83-51-34.ngrok.io\n",
-            "INFO:     85.26.176.86:0 - \"GET / HTTP/1.1\" 200 OK\n"
+            "Public URL: https://6a28-34-16-168-183.ngrok.io\n",
+            "INFO:     51.89.157.175:0 - \"GET / HTTP/1.1\" 200 OK\n",
+            "INFO:     51.89.157.175:0 - \"GET /favicon.ico HTTP/1.1\" 404 Not Found\n",
+            "INFO:     51.89.157.175:0 - \"GET / HTTP/1.1\" 200 OK\n"
           ]
         },
         {
@@ -167,7 +160,7 @@
             "INFO:     Shutting down\n",
             "INFO:     Waiting for application shutdown.\n",
             "INFO:     Application shutdown complete.\n",
-            "INFO:     Finished server process [333]\n"
+            "INFO:     Finished server process [160]\n"
           ]
         }
       ]
