Создано с помощью Colaboratory

--- a/sqlite3.ipynb
+++ b/sqlite3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPzoDf92+s1iPYlDVC8WS4k",
+      "authorship_tag": "ABX9TyMtyROaSY4SE19SGgKvlnvV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,33 +58,35 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6sHeQq_zCUep",
-        "outputId": "58f4a892-c5c7-4d6e-dbe5-6d4e5e3977fa"
+        "outputId": "8f4f405a-c2c6-4b71-90c1-a7d4a5da2949"
       },
-      "execution_count": 97,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "users\n",
-            "+------+--------+---------+\n",
-            "|  id  |  name  |  email  |\n",
-            "+======+========+=========+\n",
-            "+------+--------+---------+\n",
+            "+------+----------+---------------------+\n",
+            "|   id |   name   |        email        |\n",
+            "+======+==========+=====================+\n",
+            "|    1 | John Doe | johndoe@example.com |\n",
+            "+------+----------+---------------------+\n",
             "\n",
             "\n",
             "chats\n",
-            "+------+--------+-----------+\n",
-            "|  id  |  name  |  user_id  |\n",
-            "+======+========+===========+\n",
-            "+------+--------+-----------+\n",
+            "+------+---------+-----------+\n",
+            "|   id |  name   |   user_id |\n",
+            "+======+=========+===========+\n",
+            "|    1 | General |         1 |\n",
+            "+------+---------+-----------+\n",
             "\n",
             "\n",
             "messages\n",
-            "+------+-----------+-----------+-----------+\n",
-            "|  id  |  user_id  |  chat_id  |  message  |\n",
-            "+======+===========+===========+===========+\n",
-            "+------+-----------+-----------+-----------+\n",
+            "+------+-----------+-----------+-----------+--------------+\n",
+            "|  id  |  chat_id  |  user_id  |  message  |  created_at  |\n",
+            "+======+===========+===========+===========+==============+\n",
+            "+------+-----------+-----------+-----------+--------------+\n",
             "\n",
             "\n"
           ]
@@ -93,7 +95,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 96,
+      "execution_count": 137,
       "metadata": {
         "id": "OeZF4PucumdZ"
       },
@@ -103,25 +105,26 @@
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
         "    cursor.execute(\"\"\"CREATE TABLE users (\n",
-        "                      id INTEGER PRIMARY KEY,\n",
-        "                      name TEXT,\n",
-        "                      email TEXT\n",
+        "                      id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+        "                      name VARCHAR(255) NOT NULL,\n",
+        "                      email VARCHAR(255) NOT NULL\n",
         "                    );\"\"\")\n",
         "\n",
         "    cursor.execute(\"\"\"CREATE TABLE chats (\n",
-        "                      id INTEGER PRIMARY KEY,\n",
-        "                      name TEXT,\n",
-        "                      user_id INTEGER,\n",
+        "                      id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+        "                      name VARCHAR(255) NOT NULL,\n",
+        "                      user_id INTEGER NOT NULL,\n",
         "                      FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE\n",
         "                    );\"\"\")\n",
         "\n",
         "    cursor.execute(\"\"\"CREATE TABLE messages (\n",
-        "                      id INTEGER PRIMARY KEY,\n",
-        "                      user_id INTEGER,\n",
-        "                      chat_id INTEGER,\n",
-        "                      message TEXT,\n",
-        "                      FOREIGN KEY (user_id) REFERENCES users (id),\n",
-        "                      FOREIGN KEY (chat_id) REFERENCES chats (id) ON DELETE CASCADE\n",
+        "                      id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+        "                      chat_id INTEGER NOT NULL,\n",
+        "                      user_id INTEGER NOT NULL,\n",
+        "                      message TEXT NOT NULL,\n",
+        "                      created_at DATETIME NOT NULL,\n",
+        "                      FOREIGN KEY (chat_id) REFERENCES chats (id) ON DELETE CASCADE,\n",
+        "                      FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE\n",
         "                    );\"\"\")\n",
         "\n",
         "    connection.commit()\n",
@@ -129,27 +132,35 @@
         "# create_db()\n",
         "\n",
         "\n",
-        "def insert():\n",
+        "def insert(message: str, username: str, chatname: str):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"\"\"INSERT INTO users (name, email) VALUES ('John Doe', 'johndoe@example.com');\"\"\")\n",
-        "    cursor.execute(\"\"\"INSERT INTO chats (name, user_id) VALUES ('General', 1);\"\"\")\n",
-        "    cursor.execute(\"\"\"INSERT INTO messages (user_id, chat_id, message) VALUES (1, 1, 'Hello, world!');\"\"\")\n",
+        "    # cursor.execute(\"\"\"INSERT INTO users (name, email) VALUES ('John Doe', 'johndoe@example.com');\"\"\")\n",
+        "    # cursor.execute(\"\"\"INSERT INTO chats (name, user_id) VALUES ('General', 1);\"\"\")\n",
+        "    cursor.execute(f\"\"\"INSERT INTO messages (chat_id, user_id, message, created_at)\n",
+        "                      SELECT chats.id, users.id,{message}, CURRENT_TIMESTAMP\n",
+        "                      FROM users\n",
+        "                      JOIN chats ON chats.user_id = users.id\n",
+        "                      WHERE users.name={username} AND chats.name={chatname};\"\"\")\n",
         "    connection.commit()\n",
         "\n",
-        "# insert()\n",
         "\n",
         "\n",
+        "# insert('\"hello\"', '\"John Doe\"', '\"General\"')\n",
         "\n",
-        "def delete():\n",
+        "\n",
+        "def delete(username: str, chatname: str):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"\"\"DELETE FROM users WHERE name = 'John Doe';\"\"\")\n",
-        "    cursor.execute(\"\"\"DELETE FROM chats WHERE name = 'General';\"\"\")\n",
-        "    cursor.execute(\"\"\"DELETE FROM messages WHERE message = 'Hello, world!';\"\"\")\n",
+        "    cursor.execute(f\"\"\"DELETE FROM messages\n",
+        "                      WHERE chat_id = (\n",
+        "                      SELECT chats.id\n",
+        "                      FROM chats\n",
+        "                      JOIN users ON chats.user_id = users.id\n",
+        "                      WHERE users.name={username} AND chats.name={chatname});\"\"\")\n",
         "    connection.commit()\n",
         "\n",
-        "delete()"
+        "delete('\"John Doe\"', '\"General\"')"
       ]
     }
   ]
