Создано с помощью Colaboratory

--- a/sqlite3.ipynb
+++ b/sqlite3.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMtyROaSY4SE19SGgKvlnvV",
+      "authorship_tag": "ABX9TyOagIX2VFTdAKtHnhdONp0s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -37,16 +37,19 @@
         "def show_tables():\n",
         "  tables = ['users', 'chats', 'messages']\n",
         "  def show(tablename):\n",
-        "    with sqlite3.connect(db) as connection:\n",
-        "      cursor = connection.cursor()\n",
-        "      cursor.execute(f'SELECT * FROM {tablename}')\n",
-        "      results = cursor.fetchall()\n",
-        "      headers = []\n",
-        "      for i in range(len(cursor.description)):\n",
-        "        headers.append(cursor.description[i][0])\n",
-        "      print(tablename)\n",
-        "      print(tabulate(results, headers=headers, tablefmt='grid', stralign='center'))\n",
-        "      print(\"\\n\")\n",
+        "    try:\n",
+        "      with sqlite3.connect(db) as connection:\n",
+        "        cursor = connection.cursor()\n",
+        "        cursor.execute(f'SELECT * FROM {tablename}')\n",
+        "        results = cursor.fetchall()\n",
+        "        headers = []\n",
+        "        for i in range(len(cursor.description)):\n",
+        "          headers.append(cursor.description[i][0])\n",
+        "        print(tablename)\n",
+        "        print(tabulate(results, headers=headers, tablefmt='grid', stralign='center'))\n",
+        "        print(\"\\n\")\n",
+        "    except:\n",
+        "      print(\"Empty\")\n",
         "\n",
         "  for table in tables:\n",
         "    show(table)\n",
@@ -58,35 +61,50 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6sHeQq_zCUep",
-        "outputId": "8f4f405a-c2c6-4b71-90c1-a7d4a5da2949"
+        "outputId": "74261196-a825-4310-8c64-eec8a65cae85"
       },
-      "execution_count": 138,
+      "execution_count": 199,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "users\n",
-            "+------+----------+---------------------+\n",
-            "|   id |   name   |        email        |\n",
-            "+======+==========+=====================+\n",
-            "|    1 | John Doe | johndoe@example.com |\n",
-            "+------+----------+---------------------+\n",
+            "+------+------------+------------+\n",
+            "|   id |  username  |   password |\n",
+            "+======+============+============+\n",
+            "|    1 |    Ivan    |      12345 |\n",
+            "+------+------------+------------+\n",
+            "|    2 |    Mike    |      12345 |\n",
+            "+------+------------+------------+\n",
             "\n",
             "\n",
             "chats\n",
-            "+------+---------+-----------+\n",
-            "|   id |  name   |   user_id |\n",
-            "+======+=========+===========+\n",
-            "|    1 | General |         1 |\n",
-            "+------+---------+-----------+\n",
+            "+------+------------+-----------+\n",
+            "|   id |  chatname  |   user_id |\n",
+            "+======+============+===========+\n",
+            "|    1 | ivans_chat |         1 |\n",
+            "+------+------------+-----------+\n",
+            "|    2 | ivans_chat |         2 |\n",
+            "+------+------------+-----------+\n",
+            "|    3 | mikes_chat |         1 |\n",
+            "+------+------------+-----------+\n",
+            "|    4 | mikes_chat |         2 |\n",
+            "+------+------------+-----------+\n",
             "\n",
             "\n",
             "messages\n",
-            "+------+-----------+-----------+-----------+--------------+\n",
-            "|  id  |  chat_id  |  user_id  |  message  |  created_at  |\n",
-            "+======+===========+===========+===========+==============+\n",
-            "+------+-----------+-----------+-----------+--------------+\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
+            "|   id |   chat_id |   user_id |  message  |     created_at      |\n",
+            "+======+===========+===========+===========+=====================+\n",
+            "|    1 |         1 |         1 |   hello   | 2023-11-12 02:46:18 |\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
+            "|    2 |         2 |         2 |   hello   | 2023-11-12 02:46:18 |\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
+            "|    3 |         3 |         1 |   hello   | 2023-11-12 02:46:18 |\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
+            "|    4 |         4 |         2 |   hello   | 2023-11-12 02:46:18 |\n",
+            "+------+-----------+-----------+-----------+---------------------+\n",
             "\n",
             "\n"
           ]
@@ -95,7 +113,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 198,
       "metadata": {
         "id": "OeZF4PucumdZ"
       },
@@ -104,20 +122,20 @@
         "def create_db():\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    cursor.execute(\"\"\"CREATE TABLE users (\n",
+        "    cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS users (\n",
         "                      id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "                      name VARCHAR(255) NOT NULL,\n",
-        "                      email VARCHAR(255) NOT NULL\n",
+        "                      username VARCHAR(255) NOT NULL,\n",
+        "                      password VARCHAR(255) NOT NULL\n",
         "                    );\"\"\")\n",
         "\n",
-        "    cursor.execute(\"\"\"CREATE TABLE chats (\n",
+        "    cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS chats (\n",
         "                      id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
-        "                      name VARCHAR(255) NOT NULL,\n",
+        "                      chatname VARCHAR(255) NOT NULL,\n",
         "                      user_id INTEGER NOT NULL,\n",
         "                      FOREIGN KEY (user_id) REFERENCES users (id) ON DELETE CASCADE\n",
         "                    );\"\"\")\n",
         "\n",
-        "    cursor.execute(\"\"\"CREATE TABLE messages (\n",
+        "    cursor.execute(\"\"\"CREATE TABLE IF NOT EXISTS messages (\n",
         "                      id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
         "                      chat_id INTEGER NOT NULL,\n",
         "                      user_id INTEGER NOT NULL,\n",
@@ -129,24 +147,50 @@
         "\n",
         "    connection.commit()\n",
         "\n",
-        "# create_db()\n",
+        "create_db()\n",
         "\n",
         "\n",
-        "def insert(message: str, username: str, chatname: str):\n",
+        "def insert_user(username: str, password: str):\n",
         "  with sqlite3.connect(db) as connection:\n",
         "    cursor = connection.cursor()\n",
-        "    # cursor.execute(\"\"\"INSERT INTO users (name, email) VALUES ('John Doe', 'johndoe@example.com');\"\"\")\n",
-        "    # cursor.execute(\"\"\"INSERT INTO chats (name, user_id) VALUES ('General', 1);\"\"\")\n",
+        "    cursor.execute(f\"\"\"INSERT INTO users (username, password) VALUES ({username}, {password});\"\"\")\n",
+        "    connection.commit()\n",
+        "\n",
+        "# insert_user('\"Ivan\"', '\"12345\"')\n",
+        "# insert_user('\"Mike\"', '\"12345\"')\n",
+        "\n",
+        "\n",
+        "\n",
+        "def insert_chat(username: str, chatname: str):\n",
+        "  with sqlite3.connect(db) as connection:\n",
+        "    cursor = connection.cursor()\n",
+        "    cursor.execute(f\"\"\"INSERT INTO chats (chatname, user_id) VALUES ({chatname},\n",
+        "                      (SELECT id FROM users WHERE username = {username}));\"\"\")\n",
+        "    connection.commit()\n",
+        "\n",
+        "# insert_chat('\"Ivan\"', '\"ivans_chat\"')\n",
+        "# insert_chat('\"Mike\"', '\"ivans_chat\"')\n",
+        "# insert_chat('\"Ivan\"', '\"mikes_chat\"')\n",
+        "# insert_chat('\"Mike\"', '\"mikes_chat\"')\n",
+        "\n",
+        "\n",
+        "\n",
+        "def insert_message(message: str, username: str, chatname: str):\n",
+        "  with sqlite3.connect(db) as connection:\n",
+        "    cursor = connection.cursor()\n",
         "    cursor.execute(f\"\"\"INSERT INTO messages (chat_id, user_id, message, created_at)\n",
         "                      SELECT chats.id, users.id,{message}, CURRENT_TIMESTAMP\n",
         "                      FROM users\n",
         "                      JOIN chats ON chats.user_id = users.id\n",
-        "                      WHERE users.name={username} AND chats.name={chatname};\"\"\")\n",
+        "                      WHERE users.username={username} AND chats.chatname={chatname};\"\"\")\n",
         "    connection.commit()\n",
         "\n",
         "\n",
         "\n",
-        "# insert('\"hello\"', '\"John Doe\"', '\"General\"')\n",
+        "# insert_message('\"hello\"', '\"Ivan\"', '\"ivans_chat\"')\n",
+        "# insert_message('\"hello\"', '\"Mike\"', '\"ivans_chat\"')\n",
+        "# insert_message('\"hello\"', '\"Ivan\"', '\"mikes_chat\"')\n",
+        "# insert_message('\"hello\"', '\"Mike\"', '\"mikes_chat\"')\n",
         "\n",
         "\n",
         "def delete(username: str, chatname: str):\n",
@@ -157,10 +201,10 @@
         "                      SELECT chats.id\n",
         "                      FROM chats\n",
         "                      JOIN users ON chats.user_id = users.id\n",
-        "                      WHERE users.name={username} AND chats.name={chatname});\"\"\")\n",
+        "                      WHERE users.username={username} AND chats.chatname={chatname});\"\"\")\n",
         "    connection.commit()\n",
         "\n",
-        "delete('\"John Doe\"', '\"General\"')"
+        "delete('\"Ivan\"', '\"new_chat\"')"
       ]
     }
   ]
