Создано с помощью Colaboratory

--- a/sqlite3.ipynb
+++ b/sqlite3.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOagIX2VFTdAKtHnhdONp0s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,9 +60,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6sHeQq_zCUep",
-        "outputId": "74261196-a825-4310-8c64-eec8a65cae85"
+        "outputId": "991cca28-375d-447a-ec8e-9c4f0df0b5c9"
       },
-      "execution_count": 199,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,13 +96,11 @@
             "+------+-----------+-----------+-----------+---------------------+\n",
             "|   id |   chat_id |   user_id |  message  |     created_at      |\n",
             "+======+===========+===========+===========+=====================+\n",
-            "|    1 |         1 |         1 |   hello   | 2023-11-12 02:46:18 |\n",
+            "|    2 |         2 |         2 |   hello   | 2023-11-12 04:31:06 |\n",
             "+------+-----------+-----------+-----------+---------------------+\n",
-            "|    2 |         2 |         2 |   hello   | 2023-11-12 02:46:18 |\n",
+            "|    3 |         3 |         1 |   hello   | 2023-11-12 04:31:06 |\n",
             "+------+-----------+-----------+-----------+---------------------+\n",
-            "|    3 |         3 |         1 |   hello   | 2023-11-12 02:46:18 |\n",
-            "+------+-----------+-----------+-----------+---------------------+\n",
-            "|    4 |         4 |         2 |   hello   | 2023-11-12 02:46:18 |\n",
+            "|    4 |         4 |         2 |   hello   | 2023-11-12 04:31:06 |\n",
             "+------+-----------+-----------+-----------+---------------------+\n",
             "\n",
             "\n"
@@ -113,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 198,
+      "execution_count": 2,
       "metadata": {
         "id": "OeZF4PucumdZ"
       },
@@ -156,8 +153,8 @@
         "    cursor.execute(f\"\"\"INSERT INTO users (username, password) VALUES ({username}, {password});\"\"\")\n",
         "    connection.commit()\n",
         "\n",
-        "# insert_user('\"Ivan\"', '\"12345\"')\n",
-        "# insert_user('\"Mike\"', '\"12345\"')\n",
+        "insert_user('\"Ivan\"', '\"12345\"')\n",
+        "insert_user('\"Mike\"', '\"12345\"')\n",
         "\n",
         "\n",
         "\n",
@@ -168,10 +165,10 @@
         "                      (SELECT id FROM users WHERE username = {username}));\"\"\")\n",
         "    connection.commit()\n",
         "\n",
-        "# insert_chat('\"Ivan\"', '\"ivans_chat\"')\n",
-        "# insert_chat('\"Mike\"', '\"ivans_chat\"')\n",
-        "# insert_chat('\"Ivan\"', '\"mikes_chat\"')\n",
-        "# insert_chat('\"Mike\"', '\"mikes_chat\"')\n",
+        "insert_chat('\"Ivan\"', '\"ivans_chat\"')\n",
+        "insert_chat('\"Mike\"', '\"ivans_chat\"')\n",
+        "insert_chat('\"Ivan\"', '\"mikes_chat\"')\n",
+        "insert_chat('\"Mike\"', '\"mikes_chat\"')\n",
         "\n",
         "\n",
         "\n",
@@ -187,10 +184,10 @@
         "\n",
         "\n",
         "\n",
-        "# insert_message('\"hello\"', '\"Ivan\"', '\"ivans_chat\"')\n",
-        "# insert_message('\"hello\"', '\"Mike\"', '\"ivans_chat\"')\n",
-        "# insert_message('\"hello\"', '\"Ivan\"', '\"mikes_chat\"')\n",
-        "# insert_message('\"hello\"', '\"Mike\"', '\"mikes_chat\"')\n",
+        "insert_message('\"hello\"', '\"Ivan\"', '\"ivans_chat\"')\n",
+        "insert_message('\"hello\"', '\"Mike\"', '\"ivans_chat\"')\n",
+        "insert_message('\"hello\"', '\"Ivan\"', '\"mikes_chat\"')\n",
+        "insert_message('\"hello\"', '\"Mike\"', '\"mikes_chat\"')\n",
         "\n",
         "\n",
         "def delete(username: str, chatname: str):\n",
@@ -204,7 +201,7 @@
         "                      WHERE users.username={username} AND chats.chatname={chatname});\"\"\")\n",
         "    connection.commit()\n",
         "\n",
-        "delete('\"Ivan\"', '\"new_chat\"')"
+        "delete('\"Ivan\"', '\"ivans_chat\"')"
       ]
     }
   ]
